k8s/ingress/toktik-traefik-websocket.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: websocket
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: http
