k8s/ingress/toktik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toktik-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    ingress.kubernetes.io/protocol: http
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: toktik-backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: toktik-frontend-service
                port:
                  number: 80
